<package>
  <name>dynamic_graph_bridge_msgs</name>
  <description>
    Dynamic graph bridge messages and services.
  </description>
  <author email="pierre.gergondet+github@gmail.com">Pierre Gergondet</author>
  <maintainer email="pierre.gergondet+github@gmail.com">Pierre Gergondet</maintainer>
  <license>BSD</license>
  <version>1.0.0</version>
  <url>https://ros.org/wiki/dynamic_graph_bridge_msgs</url>
  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
